@@ -8,6 +8,7 @@ exempt of errors.
 
 - Arno Willig
 - Chaos
+- David Maass
 - Erik Johansson
 - Eric Tanguy
 - Erwan Velu
